S03P13A402-150 Fix not-aligned object

--- a/frontend/src/sass/_profile.scss
+++ b/frontend/src/sass/_profile.scss
@@ -87,15 +87,12 @@
 .tag {
     background: white;
     border-radius: 10px;
-    padding: 3px 8px;
+    padding: 0px 8px;
     font-size: 14px;
     margin-right: 4px;
-    line-height: 35px;
+    // line-height: 35px;
     cursor: pointer;
 }
-// .tag::before {
-//     content: "#";
-// }
 
 .inputtag{
     background-color: transparent;
